# MSAnnika_Spectral_Library_exporter

./: .gitmodules  Dockerfile  POSTPROCESSING.md  README.md  _config.yml  config.py  create_consensus_library.py  create_spectral_library.py  post_process.py  pyproject.toml  requirements.txt  shrink.py  test_ms_files.py
.github/workflows/: docker-image.yml  python-app-xi.yml  python-app.yml
data/: 20220215_Eclipse_LC6_PepMap50cm-cartridge_mainlib_DSSO_3CV_stepHCD_OT_001.mzML  20220215_Eclipse_LC6_PepMap50cm-cartridge_mainlib_DSSO_3CV_stepHCD_OT_001.xlsx  20220215_Eclipse_LC6_PepMap50cm-cartridge_mainlib_DSSO_3CV_stepHCD_OT_001_noCV.xlsx  XLpeplib_Beveridge_QEx-HFX_DSS_R1.mgf  config_xi.py  example_CSM_xiFDR2.2.1.csv  example_CSM_xiFDR2.2.1_adapted.csv  test_filter.xlsx  test_reverse_mods.xlsx
gui/: streamlit_app.py
tests/: tests-xi.py  tests.py
